Corrigido Refatoração metodo convertToListDTO